--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,11 @@
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3"
+    "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/validator": "^5.0.6",
+    "adonis-bumblebee": "^2.1.0",
+    "adonis-lucid-filter": "^1.0.5",
+    "pg": "^7.18.2"
   },
   "devDependencies": {},
   "autoload": {
