--- a/mobile/app.json
+++ b/mobile/app.json
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#0743B1"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -19,6 +19,10 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.techstep.comparaki",
+      "versionCode": 1
     }
   }
 }
