--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "react-native-calendar-picker": "^6.0.6",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
